--- a/projectrekammedis/pubspec.yaml
+++ b/projectrekammedis/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   loading_animation_widget: ^1.3.0
   percent_indicator: ^4.2.3
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
