--- a/projectrekammedis/pubspec.yaml
+++ b/projectrekammedis/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   percent_indicator: ^4.2.3
   smooth_page_indicator: ^1.2.0+3
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
