--- a/projectrekammedis/pubspec.yaml
+++ b/projectrekammedis/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   percent_indicator: ^4.2.3
   smooth_page_indicator: ^1.2.0+3
   get_storage: ^2.1.1
+  date_picker_plus: ^4.1.0
+  flutter_datetime_picker: ^1.5.1
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
