--- a/projectrekammedis/pubspec.yaml
+++ b/projectrekammedis/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   firebase_auth: ^5.3.1
   water_drop_nav_bar: ^2.2.2
+  modal_bottom_sheet: ^3.0.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
